<resources>
    <string name="app_name">ETC Toll Plaza</string>
    <string name="title_activity_login_view">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vehivle_number">EX.DHAKA METRO-DA-XX-XXXX</string>

    <!-- invalid enter text -->
    <string name="enter_name">Must enter name</string>
    <string name="enter_mobile">Must enter mobile</string>
    <string name="enter_acno">Must enter account no</string>
    <string name="enter_password">Must enter password</string>
    <string name="enter_rePassword">Must enter rePassword</string>

    <string name="user_mobile">Mobile</string>
    <string name="password">Password</string>

    <string name="hintmoble">01717722666</string>

    <string name="login">Login</string>
    <string name="already">i have no account? <font color='red'>Sign up</font></string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="regnum_toll">Regnum ETC</string>
    <string name="regnum_email">regnumit786@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_update">Update</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="log_out">log out</string>
    <string name="car_registration">Car Registration</string>
    <string name="profile">Profile</string>

    <string name="motor_cycle">Motor Cycle</string>
    <string name="vehicles_type">Vehicles Type</string>
    <string name="registration_type">Registration Number Plate</string>

    <string name="date_time">Date &amp; Time</string>
    <string name="toll_rate">Toll Rate</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="name">Name : </string>
    <string name="email">regnum786@gmail.com</string>
    <string name="mobile">01717722666</string>
    <string name="update_mobile">1717722666</string>
    <string name="sign_in_number">Enter sign in mobile number</string>

    <string name="Email">Email : </string>
    <string name="Phone">Phone : </string>
    <string name="account">Bank Account : </string>
    <string name="vehicle_num">Vehicle Number : </string>
    <string name="vehicle_theses">Vehicle Theses : </string>
    <string name="sign_up">Sign Up</string>

    <string name="Confirm_password">Confirm password</string>
    <string name="communicate">Communicate</string>

    <string name="update">UPDATE</string>


    <string name="profileN">Regnum IT</string>
    <string name="profileE">regnumit786@gmail.com</string>
    <string name="profileP">01717722666</string>
    <string name="profileBN">0625147896547</string>
    <string name="profileVN">DHA-matro-ch50</string>
    <string name="profileVT">13548312</string>

    <string name="regnumTitle">Regnum IT Ltd.</string>
    
    <string name="front_text">Registration your car and save your time</string>

    <string name="login_share_prefarance">ETCTollPlazaLogin_share_prefarance</string>
    <string name="login_status_share_prefarance">ETCTollPlazaLogin_status_share_prefarance</string>

    <!--sharepreference data-->

    <string name="signupStore">Signup_UsreDataStore</string>
    <string name="loginStore">Login_UsreDataStore</string>

    
</resources>
