<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/update"
            android:icon="@drawable/ic_update"
            android:title="@string/update" />
        <item
            android:id="@+id/ocr_activity"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/ocr_activity" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_all_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
