<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16sp"
    android:paddingTop="30sp"
    android:paddingBottom="8sp"
    android:paddingRight="16sp"
    android:weightSum="10"
    android:background="@drawable/gradent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:paddingLeft="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/Email"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/Phone"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/vehicle_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/vehicle_num"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/vehicle_theses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/vehicle_theses"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>