<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8sp"
    android:weightSum="10"
    tools:context=".View.SignupActivityView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:paddingTop="8sp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_person_name"
                android:drawablePadding="16dp"
                android:hint="@string/name"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true" />

            <!--android:background="@drawable/edit_text_round_gray_background"-->

            <EditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_local_phone"
                android:drawablePadding="16dp"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true" />


            <!-- <EditText
                 android:id="@+id/input_account_number"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="12dp"
                 android:background="@drawable/edit_text_round_gray_background"
                 android:drawableLeft="@drawable/ic_account_number"
                 android:drawablePadding="16dp"
                 android:hint="Account Number"
                 android:inputType="textEmailAddress"
                 android:padding="12dp"/>  -->


            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/input_re_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="@string/Confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true" />


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round"
                android:onClick="SignUpBtn"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</LinearLayout>
