<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivityView"
    android:weightSum="10"
    android:padding="8sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/regnumTitle"
                    android:textSize="30sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/gray_black"/>

                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="0sp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:layout_marginTop="5sp">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_person"
                        android:tint="@color/gray_black"/>

                    <EditText
                        android:id="@+id/login_mobile"
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:maxLength="11"
                        android:hint="@string/hintmoble"
                        android:inputType="number"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15sp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:tint="@color/gray_black"
                        android:src="@drawable/password"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:maxLength="11"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="5sp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <Button
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:textColor="@color/black"
                android:background="@color/white"
                android:text="@string/login"
                android:onClick="LoginBtn" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/no_sing_up"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/already"/>

</LinearLayout>