<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".View.Profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center">


                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profilepic"
                    app:civ_border_color="#EEEEEE"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="#8BC34A"
                    app:civ_shadow_radius="10" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            android:padding="2sp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:elevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5sp"
                        android:paddingEnd="1sp"
                        android:text="@string/profileN"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray_black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:elevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5sp"
                        android:paddingEnd="1sp"
                        android:text="@string/profileE"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray_black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:elevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5sp"
                        android:paddingEnd="1sp"
                        android:text="@string/profileP"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray_black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:elevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="match_parent"
                        android:src="@drawable/accountnumber" />

                    <TextView
                        android:id="@+id/profile_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5sp"
                        android:paddingEnd="1sp"
                        android:text="@string/profileBN"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray_black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:elevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="match_parent"
                        android:src="@drawable/vehiclenumber" />

                    <TextView
                        android:id="@+id/vehicle_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5sp"
                        android:paddingEnd="1sp"
                        android:text="@string/profileVN"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray_black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:elevation="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40sp"
                        android:layout_height="match_parent"
                        android:src="@drawable/vehiclelogo"
                        android:tint="@color/black" />

                    <TextView
                        android:id="@+id/vehicle_theses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5sp"
                        android:paddingEnd="1sp"
                        android:text="@string/profileVT"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>